# fujinami

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  appveyor.yml
include/fujinami/: command.hpp  flagset.hpp  key.hpp  key_property.hpp  keyboard.hpp  keyboard_config.hpp  keyboard_layout.hpp  keyset.hpp  keyset_property.hpp  logging.hpp  platform.hpp  time.hpp
include/fujinami/buffering/: context.hpp  engine.hpp  event.hpp  state.hpp
include/fujinami/buffering/flow/: deferred.hpp  dual.hpp  immediate.hpp  result.hpp  simul.hpp
include/fujinami/config/: errors.hpp  loader.hpp
include/fujinami/logging/: macro.hpp  print.hpp
include/fujinami/mapping/: context.hpp  engine.hpp  event.hpp
include/fujinami/platform/linux/: action.hpp
include/fujinami/platform/win32/: action.hpp  key.hpp  time.hpp
include/fujinami_hook/: fujinami_hook.hpp
include/fujinami_linux/: action.hpp  input.hpp  key.hpp  time.hpp
include/fujinami_win32/: action.hpp  key.hpp  time.hpp
src/: CMakeLists.txt  buffering_engine.cpp  config_loader.cpp  deferred_key_flow.cpp  immediate_key_flow.cpp  keyboard.cpp  logging.cpp  mapping_engine.cpp  simul_key_flow.cpp
src/common/: CMakeLists.txt  keyboard.cpp
src/common/buffering/: buffering_engine.cpp
src/common/buffering/flow/: deferred_key_flow.cpp  dual_key_flow.cpp  simul_key_flow.cpp
src/common/config/: config_loader.cpp
src/common/logging/: logging.cpp
src/linux/: CMakeLists.txt  input.cpp  main.cpp
src/win32/: CMakeLists.txt  fujinami.rc  fujinami_hook.cpp  main.cpp  resource.h
test/: CMakeLists.txt  immediate_key_flow.cpp  main.cpp  simul_key_flow.cpp
